--- a/pattern-matching-instanceof/build.gradle
+++ b/pattern-matching-instanceof/build.gradle
@@ -10,8 +10,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    implementation 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor("org.projectlombok:lombok:1.18.24")
 }
 
 test {
